--- a/trabalho_faculdade_flutter/pubspec.yaml
+++ b/trabalho_faculdade_flutter/pubspec.yaml
@@ -32,9 +32,11 @@ dependencies:
   firebase_core: ^1.10.0
   firebase_auth: ^3.2.0
   cloud_firestore: ^3.1.0
+  image_picker: ^0.8.4+4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
 
 
 dev_dependencies:
